@@ -1,3 +1,8 @@
+2008-02-26 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCCast.c, src/SDCCast.h: fixed RFE #1901171 ] inerger promotion
+	  of casted varargs
+
 2008-02-25 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (genPagedPointerSet): fixed bug 1670148
